test/spec_vectors/local_set/fail/module_3.wat
(module (func $type-local-arg-num-vs-num (local f32) (local.set 0 (f64.const 0))))